--- a/ExponentialMechanism/build
+++ b/ExponentialMechanism/build
@@ -1,1 +1,1 @@
-pandoc  --mathjax -s -c ../blog.css -A ../footer.html -H ../header.html -M title:""  Readme.md -o index.html
+pandoc  --mathjax=../code/es5/tex-chtml.js -s -c ../blog.css -A ../footer.html -H ../header.html Readme.md -o index.html
