--- a/DifferentialPrivacyMain/Definitions/build
+++ b/DifferentialPrivacyMain/Definitions/build
@@ -1,1 +1,1 @@
-pandoc  --mathjax=../code/es5/tex-chtml.js -s -c ../blog.css -A ../footer.html -H ../header.html Readme.md -o index.html
+pandoc  --mathjax=../../code/es5/tex-chtml.js -s -c ../blog.css -A ../footer.html -H ../header.html Readme.md -o index.html
