--- a/Crypto/Foundations/ZK_Proofs/build
+++ b/Crypto/Foundations/ZK_Proofs/build
@@ -1,1 +1,1 @@
-pandoc  --mathjax=../../../code/es5/tex-chtml.js -s -c ../../crypto.css -A ../../cryptoFooter.html -H ../../cryptoHeader.html Readme.md -o index.html
+pandoc  --mathjax=../../../code/es5/tex-chtml.js -s -c ../../crypto.css -A ../../cryptoFooter.html -H ../../cryptoHeader.html -V title:"" Readme.md -o index.html
