--- a/DifferentialPrivacyMain/Definitions/build
+++ b/DifferentialPrivacyMain/Definitions/build
@@ -1,1 +1,4 @@
+#!/bin/bash
 pandoc  --mathjax=../../code/es5/tex-chtml.js -s -c ../blog.css -A ../footer.html -H ../header.html Readme.md -o index.html
+touch ${PWD##*/}_summary.md
+
