--- a/MyProjects/.obsidian/workspace
+++ b/MyProjects/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "House Buying/How to Buy a house.md",
-            "mode": "preview",
+            "mode": "source",
             "source": true
           }
         }
