--- a/MyProjects/.obsidian/workspace
+++ b/MyProjects/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CryptoClassics/Pedersen_VSS.md",
+            "file": "Open Problems.md",
             "mode": "source",
             "source": false
           }
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CryptoClassics/Pedersen_VSS.md",
+                "file": "Open Problems.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,15 +89,15 @@
   },
   "active": "890adba009c27cde",
   "lastOpenFiles": [
-    "CryptoClassics/Pedersen_VSS.md",
-    "Feldman VSS.md",
-    "Dwork_distributed_noise.md",
-    "Discret Log.md",
-    "Definitions_summary.md",
-    "Completeness Theorems for Non-Cryptographic Fault-Tolerant Distributed Computation.md",
-    "CheuShuffleRR_summary.md",
-    "Useful Stack overflow.md",
-    "VSS.md",
-    "Seminal Crypto.md"
+    "Open Problems.md",
+    "CryptoClassics/How to Simulate it.md",
+    "Rust-Language/Rust Notes.md",
+    "JOBS/Interesting Companies.md",
+    "CryptoClassics/VSS.md",
+    "CryptoClassics/What does it mean to be secure.md",
+    "CryptoClassics/Completeness Theorems for Non-Cryptographic Fault-Tolerant Distributed Computation.md",
+    "CryptoClassics/Diffie Hellman.md",
+    "CryptoClassics/Feldman's VSS.md",
+    "CryptoClassics/Forward Secrecy.md"
   ]
 }
